third edit copy paste

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,30 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 *.lnk
+
+# R files to ignore 
+*.Rproj
+.Rproj.user/
+.Rhistory
+.Rapp.history
+.RData
+*.RData
+*.rdb
+*.rdx
+/*.tar.gz
+/*.Rcheck/
+vignettes/*.html
+vignettes/*.pdf
+.httr-oauth
+
+# Python files
+*.py[cod]
+eggs/
+.eggs/
+*.egg-info/
+.installed.cfg
+*.egg
+.ipynb_checkpoints
+.env
+.Rproj.user
+*.pkl
